fix: spacing

--- a/src/App.css
+++ b/src/App.css
@@ -408,7 +408,7 @@ body {
 }
 
 .spacer {
-  height: 25vh;
+  height: 15vh;
 }
 
 /* Project Details Page */
